B&L QA/objects/BL_Rep_Finder__c.object
<CustomObject>
    <description>Table to store US Surgical Rep data to be used by the Rep Finder ipad/iphone app</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>3 Character Country Code</description>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <description>Employee Id</description>
        <label>Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Rep Name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal__c</fullName>
        <description>Postal code for the Rep</description>
        <label>Postal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Type__c</fullName>
        <label>Rep Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Associate Territory Manager</fullName>
                </value>
                <value>
                    <fullName>Crystalens Outcome Specialist</fullName>
                </value>
                <value>
                    <fullName>Crystalens Territory Manager</fullName>
                </value>
                <value>
                    <fullName>Inside Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Instrument Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Surgical Equipment Specialist</fullName>
                </value>
                <value>
                    <fullName>Surgical Territory Manager</fullName>
                </value>
                <value>
                    <fullName>Vitreo-Ret Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>BL Rep Finder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{0000000000}</displayFormat>
        <label>BL Rep Finder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BL Rep Finders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>